--- a/scripts/02_data_exploration.Rmd
+++ b/scripts/02_data_exploration.Rmd
@@ -51,10 +51,17 @@ head(q1dat_fish)
 For question 2, I need the kelp, oceanographic, and urchin abundance data.
 ```{r}
 urchins <- read.csv(here::here("data","Annual_Invert_RichnessAbundDiversity_2001-2018.csv")) %>% dplyr::select(year,month,site,transect, franciscanus.abundance,purpuratus.abundance,urchin.abundance)
-waterchem <- read.csv(here::here("data","Annual_CTD_WaterChemistry_MeanMax_2000-2018.csv"))
+waterchem <- read.csv(here::here("data","Annual_CTD_WaterChemistry_MeanMax_2000-2018.csv")) %>%
+  filter(target_depth_m==1) %>% dplyr::select(-target_depth_m)
+temp <- read.csv(here::here("data","Seasonal_Mean_Bottom_Temp_2002-2019.csv")) %>%
+  dplyr::select(year,site,season,mean.temp,var.temp) %>%
+  rename(mean_temp=mean.temp,var_temp=var.temp) %>%
+  pivot_longer(cols=c(mean_temp,var_temp)) %>%
+  pivot_wider(names_from=c(season,name), values_from=value)
 
 dat2_urchins <- left_join(kelp,urchins,by=c("year","month","site","transect"))
-dat2_water <- left_join(kelp,filter(waterchem, target_depth_m==1),by=c("site"="station","year"))
+dat2_water <- left_join(kelp,waterchem,by=c("site"="station","year")) %>%
+  left_join(temp,by=c("site","year"))
 head(dat2_urchins); head(dat2_water)
 ```
 <br>
@@ -120,19 +127,28 @@ corrplot(cor(invert_fish[5:13],invert_fish[14:22],use="complete.obs"), type="upp
 ## Question 2
 
 How does kelp size / abundance vary according to sea urchin density?
+
 ```{r}
 corrplot(cor(dat2_urchins[,5:11],use="complete.obs"), type="upper")
 ```
 <br>
 
 How does kelp size / abundance vary according to water chemistry?
+
 ```{r}
-kelp_chem_means <- filter(dat2_water, site %in% unique(waterchem$station)) %>% filter(!is.na(target_depth_m)) %>% dplyr::select(-target_depth_m) %>% dplyr::select(5:8,14:18)
-kelp_chem_max <- filter(dat2_water, site %in% unique(waterchem$station)) %>% filter(!is.na(target_depth_m)) %>% dplyr::select(-target_depth_m) %>% dplyr::select(5:13)
+kelp_chem_means <- filter(dat2_water, site %in% unique(waterchem$station)) %>% dplyr::select(5:8,14:18)
+kelp_chem_max <- filter(dat2_water, site %in% unique(waterchem$station)) %>% dplyr::select(5:13)
 corrplot(cor(kelp_chem_max,use="complete.obs"), type="upper")
 corrplot(cor(kelp_chem_means,use="complete.obs"), type="upper")
 ```
 <br>
+
+How does kelp size / abundance vary according to temperature?
+```{r}
+kelp_temp <- filter(dat2_water, !is.na(summer_mean_temp))
+
+corrplot(cor(kelp_temp[,c(5:8,19:22)],use="complete.obs"), type="upper")
+```
 
 
 
