--- a/scripts/04_linear_models_timseries_q1.Rmd
+++ b/scripts/04_linear_models_timseries_q1.Rmd
@@ -37,7 +37,7 @@ library(MASS)
 
 Read in data
 ```{r}
-mydat <- read.csv(here::here("data","kelp_prediction_data.csv")) %>%
+mydat <- read.csv(here::here("data","kelp_prediction_data_complete.csv")) %>%
   clean_names()
 head(mydat)
 ```
@@ -53,7 +53,9 @@ kelp_dat <- read.csv(here::here("data","Annual_Kelp_MeanSize_MeanAbund_2001-2018
   rename("prev_mean_abund" = mapy_mean_abund,"prev_max_abund"=mapy_max_abund,
          "prev_mean_size"=mapy_mean_size,"prev_max_size"=mapy_max_size) %>%
   mutate(year = year + 1)
-kelp_prev <- mydat %>% dplyr::select(year,month,site,transect,
+kelp_prev <- read.csv(here::here("data","kelp_prediction_data.csv")) %>%
+  clean_names() %>%
+  dplyr::select(year,month,site,transect,
                                      mapy_mean_abund,mapy_max_abund,mapy_mean_size,mapy_max_size) %>%
   rename("prev_mean_abund" = mapy_mean_abund,"prev_max_abund"=mapy_max_abund,
          "prev_mean_size"=mapy_mean_size,"prev_max_size"=mapy_max_size) %>%
@@ -78,14 +80,16 @@ corrplot(cor(mydat[,c(18:28,30)], use="complete.obs"), type="upper")
 
 We have three variables that quantify urchin abundance - we'll just work with total abundance (`urchin_abundance`). 
 
+Summer and winter temperatures are correlated; since kelp is a cold-water species, we'll stick with summer temperature only. But then summer temperatures are also highly correlated with a variety of water chemistry variables, so let's just take out temperature entirely. 
 
+Nitrogen and phosphorus are correlated, as are particulate organic carbon and nitrogen. Particulate organic nitrogen is highly correlated with total chlorophyll. So we'll just concentrate on nitrogetn (`no2_no3`) and particulate organic carbon (`poc`).
 
-
-Nitrogen and phosphorus are correlated, so we'll choose to look at nitrogen (`no2_no3`) because nitrogen is a key nutrient required for kelp growth. We also focused on mean seasonal temperatures, rather than the variability in seasonal temperature. 
 
 ```{r}
 lmdat <- mydat %>%
-  dplyr::select(-purpuratus_abundance,-franciscanus_abundance, -max_po4, -mean_po4)
+  dplyr::select(-purpuratus_abundance,-franciscanus_abundance, -max_po4, -mean_po4,
+                -mean_pon,-max_pon,-summer_mean_temp,-winter_mean_temp,-winter_var_temp, -summer_var_temp)
+corrplot(cor(lmdat[,c(9,14:18,20)],use="complete.obs"),type="upper")
 ```
 <br>
 
@@ -98,33 +102,20 @@ lmdat <- mydat %>%
 ```{r}
 n <- dim(lmdat)[1]
 fit.a <- lm(mapy_mean_size ~ urchin_abundance+site+
-              mean_no2_no3+mean_tchl+
-              summer_mean_temp+winter_mean_temp+
-              mean_no2_no3*summer_mean_temp+mean_tchl*summer_mean_temp +
-              site*summer_mean_temp,data=lmdat)
+              mean_no2_no3+mean_ammonia+mean_tchl+
+              prev_mean_size+site*prev_mean_size,data=lmdat)
 scp <- list(lower = ~ 1,
            upper = ~ urchin_abundance+site+
-              mean_no2_no3+mean_tchl+
-              summer_mean_temp+winter_mean_temp+
-              mean_no2_no3*summer_mean_temp+mean_tchl*summer_mean_temp+site*summer_mean_temp)
+              mean_no2_no3+mean_ammonia+mean_tchl+
+              prev_mean_size+site*prev_mean_size)
 
 fit.f <- step(fit.a, scope = scp, direction = "backward",  k = log(n))
 ```
 <br>
 
-```{r}
+```{r eval=FALSE}
 n <- dim(lmdat)[1]
 fit.e <- lm(mapy_mean_size ~ 1,data=lmdat)
-fit.a <- lm(mapy_mean_size ~ urchin_abundance+site+
-              mean_no2_no3+mean_tchl+
-              summer_mean_temp+winter_mean_temp+
-              mean_no2_no3*summer_mean_temp+mean_tchl*summer_mean_temp+
-              site*summer_mean_temp,data=lmdat)
-scp <- list(lower = ~ 1,
-           upper = ~ urchin_abundance+site+
-              mean_no2_no3+mean_tchl+
-              summer_mean_temp+winter_mean_temp+
-              mean_no2_no3*summer_mean_temp+mean_tchl*summer_mean_temp)
 
 fit.f <- step(fit.e, scope = scp, direction = "forward",  k = log(n))
 ```
@@ -143,7 +134,7 @@ summary(fit.a)
 
 #### Model Diagnostics
 
-It looks like this model violates the normality assumption, but there don't appear to be any outliers. The TA plot looks a little weird. 
+It looks like this model may violate the normality assumption, but there don't appear to be any outliers. 
 ```{r}
 par(mfrow=c(2,2))
 plot(fit.f)
@@ -166,15 +157,12 @@ hist(fit.f$residuals)
 n <- dim(lmdat)[1]
 fit.abund.e <- lm(mapy_mean_abund ~ 1,data=lmdat)
 fit.abund.a <- lm(mapy_mean_abund ~ urchin_abundance+site+
-              mean_no2_no3+mean_tchl+
-              summer_mean_temp+winter_mean_temp+
-              mean_no2_no3*summer_mean_temp+mean_tchl*summer_mean_temp+
-              site*summer_mean_temp,data=lmdat)
+              mean_no2_no3+mean_ammonia+mean_tchl+
+              prev_mean_abund+site*prev_mean_abund,data=lmdat)
 scp <- list(lower = ~ 1,
            upper = ~ urchin_abundance+site+
-              mean_no2_no3+mean_tchl+
-              summer_mean_temp+winter_mean_temp+
-              mean_no2_no3*summer_mean_temp+mean_tchl*summer_mean_temp)
+              mean_no2_no3+mean_ammonia+mean_tchl+
+              prev_mean_abund+site*prev_mean_abund)
 
 fit.abund.f <- step(fit.abund.e, scope = scp, direction = "forward",  k = log(n))
 ```
@@ -192,7 +180,7 @@ summary(fit.abund.a)
 
 #### Model Diagnostics
 
-A bunch of things look weird here: the TA plot shows a fan shape, suggesting that our estimates are less precise at higher values. The model also violates the assumption of normality. 
+A bunch of things look weird here: the TA plot shows a fan shape, suggesting that our estimates are less precise at higher values. The model also violates the assumption of normality, with a right tail on the residuals. 
 ```{r}
 par(mfrow=c(2,2))
 plot(fit.abund.f)
